# trading_bot

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  scratch.py
bot/: client.py  config.py  exceptions.py  factory.py  logging_config.py  models.py  orders.py
tests/: test_client.py  test_orders.py  test_validators.py
