[project]
name = "trading-bot"
version = "0.1.0"
description = "Simplified trading bot for Binance Futures Testnet (USDT-M)"
requires-python = ">=3.10"
dependencies = [
    "httpx",
    "pydantic==2.9.2",
    "pydantic-settings",
    "typer",
    "python-dotenv",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "respx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*"]